// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for AccoilAnalytics's page destination action: all fields 1`] = `
Object {
  "name": "Jo(AuprcXnL",
  "timestamp": Any<String>,
  "type": "page",
  "userId": "Jo(AuprcXnL",
}
`;

exports[`Testing snapshot for AccoilAnalytics's page destination action: required fields 1`] = `
Object {
  "timestamp": Any<String>,
  "type": "page",
}
`;
